--- a/frontend/src/assets/scss/lbd/_responsive.scss
+++ b/frontend/src/assets/scss/lbd/_responsive.scss
@@ -78,15 +78,14 @@
     }
 }
 
-/*          Changes for small display      */
-
 @media (max-width: 991px){
 
     .sidebar{
         right: 0 !important;
         left: auto;
         position: absolute;
-        @include transform-translate-3d(262px);
+        z-index: 10;
+        @include transform-translate-3d(270px);
         @include transition (0.5s, cubic-bezier(0.685, 0.0473, 0.346, 1));
     }
 
