Final Waste Material

--- a/frontend/src/assets/scss/lbd/_cards.scss
+++ b/frontend/src/assets/scss/lbd/_cards.scss
@@ -306,13 +306,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #ffe9e1; 
+    background-color: #fff6f4; 
 
     // #ffeae5
     // #d8f3ff
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
-    width: 96%; 
+    width: 98%; 
     height: 200px;
     margin: 0 auto; 
     margin-bottom: 32px;
