--- a/frontend/src/assets/scss/lbd/_text.scss
+++ b/frontend/src/assets/scss/lbd/_text.scss
@@ -1,35 +1,216 @@
 .font-divisi{
-    font-size: 20px;
-    color: #00c19c ; //#0c8787
-    font-weight: 600;
-    margin-left: 15px;
+	font-size: 20px;
+	color: #00c19c ; //#0c8787
+	font-weight: 600;
+	margin-left: 15px;
 }
 
 .font-id{
-    font-size: 20px;
-    font-weight: 600;
-    margin-left: 15px;
+	font-size: 20px;
+	font-weight: 600;
+	margin-left: 15px;
 }
 
 .font-tanggal-pengajuan{
-    
-    margin-left: 15px;
+	margin-left: 15px;
 }
 
 .font-judul-total{
-    font-size: 18px;
-    font-weight: 700;
-    margin-right: 15px;
+	font-size: 18px;
+	font-weight: 700;
+	margin-right: 15px;
 }
 
 .font-total{
-    font-size: 32px;
-    font-weight: 700;
-    margin-right: 15px;
+	font-size: 32px;
+	font-weight: 700;
+	margin-right: 15px;
 }
 
 .font-proses{
-    // font-size: 18px;
-    // font-weight: 700;
-    margin-right: 15px;
+	// font-size: 18px;
+	// font-weight: 700;
+	margin-right: 15px;
 }
+
+@media (min-width: 640px){
+	.dok-logo{
+		width: 100px;
+		height: 100px;
+		margin-top: -20px;
+		margin-left: -20px;
+	};
+
+	.font-title-header{
+		font-weight: 800;
+		font-size: 18pt;
+		margin-top: 40px;
+		margin-left: -20px;
+	};
+
+	.font-desc-header{
+		font-size: 13px;
+	};
+
+	.font-sub-title{
+		font-size: 19px;
+	};
+
+	.font-sub-desc{
+		font-size: 15px;
+	};
+
+	.font-title-table{
+		font-weight: 800;
+		margin-top: 50px;
+		font-size: 17px;
+	};
+
+	.font-table-header{
+		border: 1px solid gray;
+		font-size: 17px;
+	};
+
+	.font-table-body{
+		border: 1px solid gray;
+		font-size: 16px;
+	};
+
+	.font-header-sign{
+		font-size: 16px;
+		margin-top: 20px;
+	};
+
+	.font-body-sign{
+		font-size: 16px;
+		margin-top: 70px;
+	};
+
+	.card-padding{
+		padding: 30px;
+	};
+	
+};
+
+@media (min-width:1024px) and (max-width: 1440px){
+	.dok-logo{
+		width: 100px;
+		height: 100px;
+		margin-top: -20px;
+		margin-left: -20px;
+	};
+
+	.font-title-header{
+		font-weight: 800;
+		font-size: 18px;
+		margin-top: 40px;
+		margin-left: -20px;
+	};
+
+	.font-desc-header{
+		font-size: 13px;
+	};
+
+	.font-sub-title{
+		font-size: 19px;
+	};
+
+	.font-sub-desc{
+		font-size: 15px;
+	};
+
+	.font-title-table{
+		font-weight: 800;
+		margin-top: 50px;
+		font-size: 17px;
+	};
+
+	.font-table-header{
+		border: 1px solid gray;
+		font-size: 17px;
+	};
+
+	.font-table-body{
+		border: 1px solid gray;
+		font-size: 16px;
+	};
+
+	.font-header-sign{
+		font-size: 16px;
+		margin-top: 20px;
+	};
+
+	.font-body-sign{
+		font-size: 16px;
+		margin-top: 70px;
+	};
+
+	.card-padding{
+		padding: 30px;
+	};
+};
+
+@media (min-width:1440px) and (max-width: 1920px){
+	.dok-logo{
+		width: 170px;
+		height: 170px;
+		margin-top: -30px;
+	};
+
+	.font-title-header{
+		font-weight: 800;
+		margin-top: 60px;
+		margin-left: -10px;
+		font-size: 30px;
+	};
+
+	.font-desc-header{
+		font-size: 23px;
+	};
+
+	.font-sub-title{
+		font-size: 30px;
+	};
+
+	.font-sub-desc{
+		font-size: 25px;
+	};
+
+	.font-title-table{
+		font-weight: 800;
+		margin-top: 50px;
+		font-size: 25px;
+	};
+
+	.font-table-header{
+		border: 1px solid gray;
+		font-size: 25px;
+	};
+
+	.font-table-body{
+		border: 1px solid gray;
+		font-size: 25px;
+	};
+
+	.font-header-sign{
+		font-size: 25px;
+		margin-top: 20px;
+	};
+
+	.font-body-sign{
+		font-size: 25px;
+		margin-top: 110px;
+	};
+
+	.card-padding{
+		padding: 50px;
+	};
+};
+
+// @media (min-width: 1008px){
+// 	.dok-logo{
+// 		width: 170px;
+// 		height: 170px;
+// 		margin-top: -30px;
+// 	}
+// }
